# py-data-api

./: .coveragerc  .gitignore  .travis.yml  404.html  README.md  example.py  index.html  mkdocs.yml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: docs.yml  publish.yml  test.yml
contributing/: index.html
docs/: contributing.md
pydataapi/: __init__.py  dbapi.py  dialect.py  exceptions.py  pydataapi.py
pydataapi/dialect/: __init__.py  base.py  mysql.py  postgresql.py
scripts/: build_site.sh  fix_format.sh  format.sh  integration_test.sh  lint.sh  serve_site.sh  test.sh  unittest.bat  unittest.sh
search/: search_index.json
tests/integration/: docker-compose.yml  test_mysql.py
tests/pydataapi/: test_dbaapi.py  test_dialect.py  test_pydataapi.py
tests/test_pydataapi/: test_pydataapi.py
