[metadata]
name = pydataapi
description = py-data-api is a user-friendly client for AWS Aurora Serverless's Data API
url = https://github.com/koxudaxi/py-data-api
long_description = file: README.md
long_description_content_type = text/markdown
author = Koudai Aono
author_email = koxudaxi@gmail.com
license_file = LICENSE
classifiers =
        Development Status :: 3 - Alpha
        Natural Language :: English
        License :: OSI Approved :: MIT License
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
include_package_data = True
python_requires = >=3.6.1
zip_safe = True
setup_requires =
    pytest-runner
    setuptools-scm
install_requires =
    boto3 >=1.12.7,<2
    SQLAlchemy >=1.3.13,<1.4
    pydantic >=1.8,<1.9
    more-itertools >= 8.0.2,<8.5

tests_require =
    pytest
    pytest-benchmark
    pytest-cov
    pytest-mock
    pytest-docker-compose
    mypy
    black
    isort>=5.0.7
    PyMySQL
    docker-compose
    requests == 2.20.1

[options.extras_require]
docs =
    mkdocs
    mkdocs-material

wheel =
    wheel
    twine

ci =
    codecov

[aliases]
test = pytest
